1. Collection API Улучшения[#150910]